--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <html>
   <body>
+    <h1>BACK: js13k 2018</h1>
     <canvas width="500" height="500"></canvas>
     <script src="dist/main.js"></script>
   </body>
