Fixed live reloading, added canvas ID

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
   <body>
     <h1>BACK: js13k 2018</h1>
-    <canvas width="500" height="500"></canvas>
-    <script src="dist/main.js"></script>
+    <canvas id="js13k_canvas" width="500" height="500"></canvas>
+    <script src="main.js"></script>
   </body>
 </html>
