--- a/index.html
+++ b/index.html
@@ -3,9 +3,102 @@
 
 <html>
 
+<style>
+  html,
+  body {
+    height: 100%;
+  }
+
+  body {
+    background: radial-gradient(ellipse at center, rgba(255, 254, 234, 1) 0%, rgba(255, 254, 234, 1) 35%, #B7E8EB 100%);
+    overflow: hidden;
+  }
+
+  .ocean {
+    height: 5%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #015871;
+  }
+
+  .wave {
+    background: url(./src/assets/wave.svg) repeat-x;
+    position: absolute;
+    top: -198px;
+    width: 6400px;
+    height: 198px;
+    animation: wave 5s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
+    transform: translate3d(0, 0, 0);
+  }
+
+  .lane {
+    background: url(./src/assets/lane.svg) repeat-x;
+    position: absolute;
+    top: -198px;
+    width: 6400px;
+    height: 198px;
+    animation: bob 2s ease -2s infinite;
+    transform: translate3d(0, 0, 0);
+  }
+
+  .wave:nth-of-type(2) {
+    top: -175px;
+    animation: wave 5s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 5s ease -1.25s infinite;
+    opacity: 0.8;
+  }
+
+  .wave:nth-of-type(3) {
+    top: -220px;
+    animation: wave 5s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 5s ease -1.25s infinite;
+    opacity: 1;
+  }
+
+  @keyframes wave {
+    0% {
+      margin-left: 0;
+    }
+
+    100% {
+      margin-left: -1600px;
+    }
+  }
+
+  @keyframes swell {
+
+    0%,
+    100% {
+      transform: translate3d(0, -25px, 0);
+    }
+
+    50% {
+      transform: translate3d(0, 5px, 0);
+    }
+  }
+
+  @keyframes bob {
+
+    0%,
+    100% {
+      transform: translate3d(0, -10px, 0);
+    }
+
+    50% {
+      transform: translate3d(0, 5px, 0);
+    }
+  }
+</style>
+
+
 <body>
-  <h1>BACK: js13k 2018</h1>
   <canvas id="js13k_canvas" width="1024" height="768"></canvas>
+  <div class="ocean">
+    <div class="lane"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div>
   <script src="main.js"></script>
 </body>
 
